Add velocity support, change name to ProtoGui